Fixed bug #74519 strange behavior of AppendIterator